# diff_drive_fun

./: CMakeLists.txt  README.md  package.xml
launch/: sim.launch
notebooks/: modelling.ipynb
src/: cli_control.py  sim.py
viz/: rviz.rviz  sim.rqt_multiplot.xml
